@@ -4,16 +4,27 @@ ___________________________________________________________________
 Get the latest source and info at:
 	http://www.crosswire.org
 
-UNIX developers	You can try a './configure' (or optionally './usrinst.sh'
+UNIX DEVELOPERS
+		You can try a './configure' (or optionally './usrinst.sh'
 		for normal user configure options), then 'make' from this directory.
 		This should compile everthing needed.  You may type
 		'./configure --help' to see a list of options.
-		If all compiles file, a 'make install' (as root, probably) will
+		If all compiles fine, a 'make install' (as root, probably) will
 		install libs to your system and you may begin using the library.
-		There are a few basic tests (sword/tests), utilities
-		(sword/utilities), examples (sword/examples/*) and very basic apps
-		(sword/apps), in the tree.  The apps each have their own make system,
-		so look for a ./configure or a README.
+		There are a few basic tests (tests/), start of a test suite
+		(tests/testsuite/), utilities (utilities/), and examples
+		(examples/), in the tree.
+
+		To install modules, have a look at utilities/installmgr
+
+		For some basic lookup and search utilities, see
+			examples/cmdline/search
+			examples/cmdline/lookup
+			utilities/diatheke/
+
+		If you are an end user looking for a nice SWORD, graphical Bible study
+		software suite, then you'll probably want to download one of the
+		many nice frontends found at http://crosswire.org
 
 		./buildtest.cpp compiles to the executable 'buildtest' as a test to
 		see if the libs have compiled and can be linked against successfully.
@@ -21,25 +32,32 @@ UNIX developers	You can try a './configure' (or optionally './usrinst.sh'
 			:)
 
 
+LANGUAGE BINDINGS
+	Other language bindings can be found in the ./bindings directory:
+	flatapi.cpp is a useful extern "C" interface for making bindings easier.
+	Kylix bindings (and maybe Delphi bindings) may be found in sword/bindings/clx
+	CORBA (orbit-c++) bindings with Java example classes in /bindings/corba
+	Perl stuff in bindings/perl
+	SWIG stuff (Python, .NET, many others) in bindings/swig
 
-Other language bindings can be found in the ./bindings directory:
-flatapi.cpp is a useful extern "C" interface for making bindings easier
-Kylix bindings (and maybe Delphi bindings) may be found in sword/bindings/clx
-CORBA (orbit-c++) bindings with Java example classes in /bindings/corba
-SWIG stuff in bindings/swig
-Perl stuff in bindings/perl
 
-C++Builder developers	You may find project files and source for the WIN32
-		frontend under apps/windows/CBuilder5/BibleCS
+C++BUILDER DEVELOPERS
+	You may find project files under lib/bcppmake
 
-Delphi developers	You will need to place sword32.dll in your winsys
-		directory or elsewhere in your path.  You can find source in
-		./apps/windoze/bcowl25/swordapi
-		or binary at: ftp://crosswire.org/pub/sword/attic/dlls.tar.gz
-		This is an older build and probably should be regenerated.
-		If you wish to add components to your toolbar, install
-		./apps/windoze/delphi20/swordvc/swmodule.pas and
-		./apps/windoze/delphi20/swordvc/swvskey.pas
+VC DEVELOPERS
+	You may find project files under lib/vcppmake
+
+DELPHI DEVELOPERS
+	You will need to place sword32.dll in your winsys
+		directory or elsewhere in your path.  You can find source to
+		build the dll using ./bindings/flatapi.cpp
+		or a binary at: ftp://crosswire.org/pub/sword/utils/win32/bcdlls.zip
+		header file is include/SwordAPI.pas
+		CLX components can be found under bindings/clx/
+
+.NET DEVELOPERS
+	Have a look in bindings/swig/vstudio/
+	Binaries may be found at: ftp://crosswire.org/pub/sword/utils/win32/vcdlls.zip
 
 Enjoy!
 
