@@ -3,7 +3,9 @@ Name=<insert here abrevation of language, e.g. de, no, it, fr etc.. Delete this 
 Description=<insert here name of language. Delete this comment.>
 
 [Text]
-<Insert after the = characters the translated booknames!. Delete this line>
+
+# Insert after the = characters the translated booknames.
+
 Genesis=
 Exodus=
 Leviticus=
@@ -72,8 +74,9 @@ Jude=
 Revelation of John=
 
 [Book Abbrevs]
-<Here are the standard english booknamrs and abbrevations. Don't change
-them. Change your own ones below! Delete these two lines!>
+
+# Here are the standard english booknames and abbrevations.  Don't change
+# them.  Change your own ones below.
 
 1 C=46
 1 CHRONICLES=13
@@ -259,9 +262,9 @@ TITUS=56
 ZECHARIAH=38
 ZEPHANIAH=36
 
-<here are the booknames and possible abbrevations of your language! The
-names below are german booknames, change them!. The number after the names
-are the booknumber (location of book in the bible). Delete these three lines!>
+# here are the booknames and possible abbrevations of your language!  The
+# names below are german booknames, change them. The number after the names
+# are the booknumber (location of book in the Bible).
 
 1. MOSE=1
 2. MOSE=2
